--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>TaskMonster</title>
-
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/darkly/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.5/slate/bootstrap.min.css">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
 
   <style>
     /* Only necessary if you are using navbar-fixed-top */
@@ -24,54 +24,91 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a href="/" class="navbar-brand">TaskMonster</a>
-      </div>
-
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a href="/notes">Notes</a></li>
-          <li><a href="/tagnames">Tagnames</a></li>
-          <li><a href="/tags">Tags</a></li>
-          <li><a href="/views">Views</a></li>
-          <li><a href="/categories">Categories</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="/users/edit">Dummy Edit Profile Link</a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Dummy Sign Out Link</a></li>
-        </ul>
-      </div><!-- /.navbar-collapse -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">TaskMonster</a>
     </div>
-  </nav>
-
-  <div class="container">
-    <% if notice.present? %>
-      <div class="alert alert-dismissable alert-success">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <%= notice %>
-      </div>
-    <% end %>
-
-    <% if alert.present? %>
-      <div class="alert alert-dismissable alert-warning">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-        <%= alert %>
-      </div>
-    <% end %>
-
-    <%= yield %>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/notes">Notes</a></li>
+        <li><a href="/tagnames">Tagnames</a></li>
+        <li><a href="/tags">Tags</a></li>
+        <li><a href="/views">Views</a></li>
+        <li><a href="/categories">Categories</a></li>
+        <li><a href="/rails/info">Sitemap</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user == nil %>
+        <li>
+          <a href="/users/sign_in">Sign In</a>
+        </li>
+        <li>
+          <a href="/users/sign_up">Sign Up</a>
+        </li>
+        <% else %>
+        <li>
+          <a href="/users/edit">
+            <i class="fa fa-fw fa-edit"></i>
+            <%= current_user.username %>
+          </a>
+        </li>
+        <li>
+          <a href="/users/sign_out" data-method="delete" rel="nofollow">
+            <i class="fa fa-fw fa-sign-out"></i>
+            Sign Out
+          </a>
+        </li>
+        <% end %>
+      </ul>
+      <form class="navbar-form navbar-right">
+        <input type="text" class="form-control" placeholder="Search...">
+      </form>
+    </div><!-- /.navbar-collapse -->
   </div>
+</nav>
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-3 col-md-1 sidebar">
+      <ul class="nav nav-sidebar">
+        <form class="navbar-form navbar-center">
+          <a href="/notes/new" class="btn btn-success btn-lg">New Note</a>
+        </form>
+      </ul>
+      <ul class="nav nav-sidebar">
+        <li><a href="#">Overview </a></li>
+        <li><a href="#">Reports</a></li>
+        <li><a href="#">Analytics</a></li>
+        <li><a href="#">Export</a></li>
+      </ul>
+    </div>
+
+    <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-1 main">
+      <% if notice.present? %>
+        <div class="alert alert-dismissable alert-success">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= notice %>
+        </div>
+      <% end %>
+
+      <% if alert.present? %>
+        <div class="alert alert-dismissable alert-warning">
+          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+          <%= alert %>
+        </div>
+      <% end %>
+
+      <%= yield %>
+
+    </div>
+  </div>
+</div>
 </body>
 </html>
