--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,23 +1,3 @@
-<div class="page-header">
-  <div class="modal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-          <p>One fine body…</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
 <div class="row">
   <div class="col-md-12">
     <table class="table table-striped table-hover">
@@ -25,7 +5,6 @@
         <th>Parent</th>
         <th>Title</th>
         <th>Body</th>
-        <th>User</th>
         <th>Category</th>
         <th>View</th>
         <th>Actions</th>
@@ -35,10 +14,9 @@
       <tr>
         <td><%= note.parent_id %></td>
         <td><%= note.title %></td>
-        <td><%= note.body %></td>
-        <td><%= note.user_id %></td>
-        <td><%= note.category_id %></td>
-        <td><%= note.view_id %></td>
+        <td><%= truncate(note.body) %></td>
+        <td><%= note.category.name %></td>
+        <td><%= note.view.name %></td>
         <td>
           <a href="/notes/<%= note.id %>" class="btn btn-primary">Show</a>
           <a href="/notes/<%= note.id %>/edit" class="btn btn-warning">Edit</a>
