--- a/app/views/notes/category.html.erb
+++ b/app/views/notes/category.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-12">
+    <h2><%= @category.name %></h2>
     <% @views.each do |view| %>
       <h3><%= view.name %></h3>
           <table class="table table-striped table-hover">
@@ -11,8 +12,9 @@
               <th width="10%">View</th>
               <th width="25%">Actions</th>
             </tr>
+
             <% @notes.order("created_at DESC").each do |note| %>
-              <% if note.view_id == view.id %>
+              <% if note.view_id == view.id && note.category_id == @category.id %>
 
                 <tr>
                   <td width="15%"><small>created <%= time_ago_in_words(note.created_at) %> ago</small></td>
