--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -70,7 +70,7 @@
       <!-- name of column trying to populate, array to draw options for, what you want to store in x_id, what you want them to see, what you want to be pre-selected -->
 
       <!-- Label and input for tag -->
-      <!-- <div class="form-group">
+      <div class="form-group">
         <label for="tagname_id" class="control-label">
           Tag
         </label>
@@ -79,7 +79,7 @@
         <p class="help-block">
           <a href="/tagnames/new">or add a new tag</a>
         </p>
-      </div> -->
+      </div>
 
       <!-- Input for user_id -->
       <input type="hidden" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= current_user.id %>">
