A few reversions.  Having difficulty

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -19,13 +19,13 @@
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
       <!-- Label and input for parent_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="parent_id" class="control-label">
           Parent
         </label>
 
         <input type="text" id="parent_id" name="parent_id" placeholder="Parent" class="form-control" value="<%= @category.parent_id %>">
-      </div>
+      </div> -->
 
       <!-- Label and input for name -->
       <div class="form-group">
@@ -40,7 +40,7 @@
         Create Category
       </button>
       or
-      <a href="/categories">Cancel</a>
+      <a href="/">Cancel</a>
     </form>
   </div>
 </div>
