--- a/app/views/notes/category.html.erb
+++ b/app/views/notes/category.html.erb
@@ -1,36 +1,64 @@
 <div class="row">
   <div class="col-md-12">
-    <h2><%= @category.name %></h2>
+    <h2><% if @category != NIL %><%= @category.name %><% else %>All <% end %> Notes</h2>
     <% @views.each do |view| %>
-      <h3><%= view.name %></h3>
+      <div class="btn-group">
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#<%= view.name %>" aria-expanded="true" aria-controls="collapseExample">
+          <%= view.name %>&nbsp;&nbsp;<% if view.notes.count != 0 %><span class="badge"><%= view.notes.count %> note<% if view.notes.count != 1 %>s<% end %></span><% end %>
+        </button>
+        <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="/views/<%= view.id %>/edit">Edit</a></li>
+          <li><a href="/views/<%= view.id %>">Show</a></li>
+          <li class="divider"></li>
+          <li><a href="/views">Show All Views</a></li>
+        </ul>
+      </div>
+      <div class="collapse in" id="<%= view.name %>">
+        <div class="card card-block">
           <table class="table table-striped table-hover">
             <tr>
-              <th width="15%"></th>
-              <th width="20%">Title</th>
-              <th width="20%">Body</th>
+              <th width="25%">Title</th>
               <th width="10%">Category</th>
-              <th width="10%">View</th>
-              <th width="25%">Actions</th>
+              <th width="10%">Created</th>
+              <th width="5%"></th>
+              <th width="35%">View</th>
+              <th width="15%">Actions</th>
             </tr>
+            <% view.notes.order("created_at DESC").each do |note| %>
+              <% if current_user.id == note.user_id %>
+              <% if @category == NIL || note.category_id == @category.id  %>
+              <tr>
+                <td width="25%"><a href="/notes/<%= note.id %>"><%= note.title %></a></td>
+                  <!-- <td width="20%"><%= truncate(note.body) %></td> -->
+                  <td width="10%"><a href="/categories/<%= note.category %>"><%= note.category.name %></td>
+                  <td width="10%"><%= time_ago_in_words(note.created_at) %> ago</small></td>
 
-            <% @notes.order("created_at DESC").each do |note| %>
-              <% if note.view_id == view.id && note.category_id == @category.id %>
+                  <form action="/categories/<%= @category.id %>/<%= note.id %>/update_view" method="post">
+                    <!-- Hidden input for authenticity token to protect from forgery -->
+                    <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+                    <td width="5%">
+                        <button class="btn btn-success">
+                            Update
+                          </button>
+                    </td>
+                    <td width="35%">
+                        <%= select_tag(:view_id, options_from_collection_for_select(View.all, :id, :name, note.view_id), :class => "form-control", :style => "max-width:50%;") %>
+                    </td>
 
-                <tr>
-                  <td width="15%"><small>created <%= time_ago_in_words(note.created_at) %> ago</small></td>
-                  <td width="20%"><%= note.title %></td>
-                  <td width="20%"><%= truncate(note.body) %></td>
-                  <td width="10%"><%= note.category.name %></td>
-                  <td width="10%"><%= note.view.name %></td>
-                  <td width="25%">
+                </form>
+                  <td width="15%">
                     <a href="/notes/<%= note.id %>" class="btn btn-primary">Show</a>
                     <a href="/notes/<%= note.id %>/edit" class="btn btn-warning">Edit</a>
                     <a href="/delete_note/<%= note.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
                   </td>
                 </tr>
-              <% end %>
+            <% end %>
+            <% end %>
             <% end %>
           </table>
+        </div>
+      </div>
     <% end %>
   </div>
 </div>
