--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,27 +1,24 @@
 <div class="page-header">
-  <h3>Note #<%= @note.id %></h3>
+  <h3><%= @note.title %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      <dt>Parent</dt>
-      <dd><%= @note.parent_id %></dd>
-
-      <dt>Title</dt>
-      <dd><%= @note.title %></dd>
+      <!-- <dt>Parent</dt>
+      <dd><%= @note.parent_id %></dd> -->
 
       <dt>Body</dt>
       <dd><%= @note.body %></dd>
 
-      <dt>User</dt>
-      <dd><%= @note.user_id %></dd>
+      <dt>View</dt>
+      <dd><%= @note.view.name %></dd>
 
       <dt>Category</dt>
-      <dd><%= @note.category_id %></dd>
+      <dd><%= @note.category.name %></dd>
 
-      <dt>View</dt>
-      <dd><%= @note.view_id %></dd>
+      <dt>Created</dt>
+      <dd><%= @note.created_at.strftime("%d %b %Y") %></dd>
 
     </dl>
 
