--- a/app/views/tagnames/new.html.erb
+++ b/app/views/tagnames/new.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Add Tagname</h3>
+  <h3>Add Tag</h3>
 </div>
 
 <div class="row">
@@ -19,13 +19,13 @@
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
       <!-- Label and input for parent_id -->
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="parent_id" class="control-label">
           Parent
         </label>
 
         <input type="text" id="parent_id" name="parent_id" placeholder="Parent" class="form-control" value="<%= @tagname.parent_id %>">
-      </div>
+      </div> -->
 
       <!-- Label and input for name -->
       <div class="form-group">
@@ -40,7 +40,7 @@
         Create Tagname
       </button>
       or
-      <a href="/tagnames">Cancel</a>
+      <a href="/">Cancel</a>
     </form>
   </div>
 </div>
