--- a/app/views/views/edit.html.erb
+++ b/app/views/views/edit.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 
 <div class="page-header">
-  <h3>Edit View #<%= @view.id %></h3>
+  <h3>Edit View "<%= @view.name %>"</h3>
 </div>
 
 <div class="row">
@@ -31,7 +31,7 @@
         Update View
       </button>
       or
-      <a href="/views/<%= @view.id %>">Cancel</a>
+      <a href="/">Cancel</a>
     </form>
   </div>
 </div>
