--- a/app/views/views/new.html.erb
+++ b/app/views/views/new.html.erb
@@ -31,7 +31,7 @@
         Create View
       </button>
       or
-      <a href="/views">Cancel</a>
+      <a href="/">Cancel</a>
     </form>
   </div>
 </div>
