--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      <dt>Parent</dt>
-      <dd><%= @category.parent_id %></dd>
+      <!-- <dt>Parent</dt>
+      <dd><%= @category.parent_id %></dd> -->
 
       <dt>Name</dt>
       <dd><%= @category.name %></dd>
