--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form action="/create_note" method="post">
+    <form action="/update_note/<%= @note.id %>" method="post">
       <!-- Hidden input for authenticity token to protect from forgery -->
       <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
 
