--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,26 +1,24 @@
 <div class="row">
   <div class="col-md-12">
-    <h2><% if @category != NIL %><%= @category.name %><% else %>All <% end %> Notes</h2>
-    <% @views.each do |view| %>
+    <h2><% if @category != NIL %><a href="/categories/<%= @category.id %>/edit"><%= @category.name %></a><% else %>All <% end %> Notes</h2>
+    <% @views.order(:name).each do |view| %>
       <div class="btn-group">
         <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#<%= view.name %>" aria-expanded="true" aria-controls="collapseExample">
           <%= view.name %>&nbsp;&nbsp;<% if view.notes.count != 0 && @category == NIL %><span class="badge"><%= view.notes.count %> note<% if view.notes.count != 1 %>s<% end %></span><% end %>
         </button>
         <a href="#" class="btn btn-primary dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="/views/<%= view.id %>/edit">Edit</a></li>
-          <li><a href="/views/<%= view.id %>">Show</a></li>
-          <li class="divider"></li>
-          <li><a href="/views">Show All Views</a></li>
+          <li><a href="/views/<%= view.id %>/edit">Edit View</a></li>
+            <li><a href="/views">Show All Views</a></li>
         </ul>
       </div>
       <div class="collapse in" id="<%= view.name %>">
         <div class="card card-block">
           <table class="table table-striped table-hover">
             <tr>
-              <th width="45%">Title</th>
+              <th width="35%">Title</th>
               <th width="5%">Category</th>
-              <th width="5%">Created</th>
+              <th width="15%">Created</th>
               <th width="5%"></th>
               <th width="20%">View</th>
               <th width="20%">Actions</th>
@@ -29,10 +27,10 @@
               <% if current_user.id == note.user_id %>
               <% if @category == NIL || note.category_id == @category.id  %>
               <tr>
-                <td width="45%"><a href="/notes/<%= note.id %>"><%= note.title %></a></td>
+                <td width="35%"><a href="/notes/<%= note.id %>"><%= note.title %></a></td>
                   <!-- <td width="20%"><%= truncate(note.body) %></td> -->
-                  <td width="5%"><a href="/categories/<%= note.category %>"><%= note.category.name %></td>
-                  <td width="5%"><%= time_ago_in_words(note.created_at) %> ago</small></td>
+                  <td width="5%"><a href="/categories/<%= note.category_id %>"><%= note.category.name %></td>
+                  <td width="15%"><%= time_ago_in_words(note.created_at) %> ago</td>
                   <form action="/notes/<%= note.id %>/update_view" method="post">
                     <!-- Hidden input for authenticity token to protect from forgery -->
                     <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
