--- a/app/views/views/show.html.erb
+++ b/app/views/views/show.html.erb
@@ -1,12 +1,10 @@
 <div class="page-header">
-  <h3>View #<%= @view.id %></h3>
+  <h3><%= @view.name %></h3>
 </div>
 
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
-      <dt>Name</dt>
-      <dd><%= @view.name %></dd>
 
     </dl>
 
